2006-05-31  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/instrum.c, timidity/readmidi.c:
	  Revert and fix around alternate assign

2006-05-28  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/mac_c.c, interface/motif_c.c, interface/vt100_c.c,
	  interface/xaw_c.c, timidity/sndfont.c:
	  Add struct member of ControlMode to fit with new interface

2006-05-26  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/timidity.c (main): The free(files[i]) loop was causing
	  segfaults by free'ing previously free'd memory.  The strings
	  within files[] are allocated as a single block pointed to by
	  files[0], then the other string pointers point to the separate
	  strings within the files[0] block.  Thus only files[0] should
	  be free'd.

2006-05-12  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* coufigure.in: Fix CFLAGS issue

2006-05-06  URABE Shyouhei <shyouhei@ice.uec.ac.jp>

	* configure.in: add wcc386 check.

2006-04-14  Stas Sergeev <stsp@aknet.ru>

	* interface/server_c.c: add midi protocol.

2006-03-21  Kentaro Sato <kentaro@ranvis.com>

	* timidity/aq.c: Made use of free-on-exit thingie.
	* timidity/instrum.c: Reverted needless r1.24 changes.
	* timidity/resample.c: Reverted gauss_table to be realloc'ed to allow
	  interfaces to change N-order dynamically. No leaks.
	* timidity/timidity.c: Reverted r1.173 changes around mblock.
	* libarc/arc.c: Better path separators skipping.

2006-03-19  Stas Sergeev <stsp@aknet.ru>

	* timidity/timidity.c (main): dynamic allocation of
	  dynamic_lib_root
	* interface/server_c.c: save CPU power

2006-02-04  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>

	* configure.in, doc/ja_JP.eucJP/README.w32, timidity/Makefile.am,
	  windrv/Makefile.am, windrv/timiditydrv.cpp, windrv/timiditydrv.def:
	  timiditydrv.dll can comple with digital Mars
	* timidity/portaudio_a.c: enable WRD with portaudio.
	* timidity/playmidi.c, interface/rtsyn_common.c, timidity/instrum.c,
	  timidity/readmidi.c: fix unfreed memory.
